feat: wallet swagger docs put\post methods
